first commit of firebased

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
+}
+ ::after, ::before {
+  box-sizing: border-box;
+  /* height: fit-content; */
+  /* height: 14vh; */
+  scroll-behavior: unset;
+  overflow-x: hidden;
+  overflow-y: hidden;
+ }
